# validating-binary-decompilation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md
binary_analyzer/: README.md  binary_analysis.py  binary_analysis_data.proto  test_cfg_reader.py
docs/: .gitignore  Q_n_A.md  aws-putty.key  aws.pem
docs/cgo_2020/: abstract.tex  custom_package.tex  introduction.tex  main.tex  relatedwork.tex  text.tex
docs/cgo_2020/bibs/: bugs.bib  decompilaion-validation.bib  modeling-X86-semantics.bib  references.bib
docs/misc/: matching_algorithm.cpp
docs/patches/: mcsema_ida_import_protobuf_fix.patch
docs/phd-thesis/: README.md
docs/pldi_2020/: Makefile  abstract.tex  approach.tex  conclusion.tex  custom_package.tex  evaluation.tex  future.tex  introduction.tex  limitation.tex  main.tex  preliminaries.tex  preliminaries_K.tex  preliminaries_Mcsema.tex  preliminaries_Strata.tex  relatedwork.tex  text.txt
docs/sessions-settings/: parser.bkpt  remill.vim  smt.bkpt
docs/vim.sessions/: k.vim  llvm.vim  remill.vim  stoke.vim  test.vim
docs/z3_artifcats/: URem_SRem_and.py  bc_mod.py  mod_oper.py  sideConds.py
include/: max_stack_height.h  stack_deconstructor.h  variable_correspondence.h
ir_analyzer/: CMakeLists.txt  README.md
ir_analyzer/include/: llvm-dfg.h  signature.h  variable_correspondence.h
ir_analyzer/libs/: CMakeLists.txt
ir_analyzer/libs/variable_correspondence/: CMakeLists.txt  variable_correspondence.cpp
libs/stack_deconstructor/: stack_deconstructor.cpp
libs/variable_correspondence/: variable_correspondence.cpp
misc_projects/binary_analyzer/: binary_analysis_data_pb2.py
misc_projects/testing_x86_dfg/: test_2.asm  test_4.asm.dot.gold  test_9.asm
reports/prelim-exam/: pthesis2.pptx
scripts/: decompiler_run.py  mcsema_out.sh  utils.py
scripts/binlib/: utils.py
scripts/extractor/: extractor.py
single_instruction_translation_validation/: README.md  instr.txt
single_instruction_translation_validation/scripts/: create_directtory_structure.pl  create_jmp_seed.pl  declutter.pl  specialize_template.pl
single_instruction_translation_validation/tests/: .gitignore  README.md
source/: CMakeLists.txt  README.md
source/include/: alias_info.h  compositional-decompiler.h  data-dep-graph.h  esp_codegen.h  exprs.h  llvm-dfg-dot.h  llvm-dfg-matcher.h  llvm-dfg.h  llvm-graph-matching.h  max_stack_height.h  memssa.h  signature.h  smt-generator.h  stack_deconstructor.h  variable_correspondence.h
source/libs/: CMakeLists.txt
source/libs/alias_info/: CMakeLists.txt  alias_info.cpp
source/libs/compositional-decompiler/: CMakeLists.txt  compositional-decompiler.cpp
source/libs/compositional-decompiler/data/: mcsema_template.txt
source/libs/esp_codegen/: .esp_codegen.cpp.swp  CMakeLists.txt  esp_codegen.cpp
source/libs/exprs/: CMakeLists.txt  exprs.cpp
source/libs/func-analyzer/: CMakeLists.txt  func-analyzer.cpp
source/libs/llvm-graph-matching/: .llvm_graph_matching.cpp.swp  CMakeLists.txt  data-dep-graph.cpp  llvm-graph-matching.cpp
source/libs/max_stack_height/: CMakeLists.txt  max_stack_height.cpp
source/libs/memssa/: CMakeLists.txt  memssa.cpp
source/libs/signature/: CMakeLists.txt  signature.cpp
source/libs/smt-generator/: CMakeLists.txt  smt-generator.cpp
source/libs/stack_deconstructor/: CMakeLists.txt
source/libs/variable_correspondence/: CMakeLists.txt  variable_correspondence.cpp
source/tools/: CMakeLists.txt
source/tools/allin/: CMakeLists.txt  allin.cpp
source/tools/decompiler/: CMakeLists.txt  decompiler.cpp
source/tools/iterative-pruning-matcher/: CMakeLists.txt  iterative-pruning-matcher.cpp
source/tools/lltodot/: CMakeLists.txt  lltodot.cpp
source/tools/matcher/: CMakeLists.txt  matcher.cpp
source/tools/spec-to-smt/: CMakeLists.txt  spec-to-smt.cpp
source/tools/variable_bb_correspondence/: CMakeLists.txt  variable_bb_correspondence.cpp
tests/: README.md  filelist.txt
tests/add/: Makefile
tests/add/binary/: add.asm  (+2 more)
tests/add_sub/: Makefile
tests/array_reverse/: array_reverse  array_reverse.asm  array_reverse.i64
tests/binary_search/: Makefile  binary_search.asm  binary_search.i64
tests/compositional_artifacts_single_instruction_decompilation/: .gitignore
tests/covariance/: covariance.json
tests/dbms/: dbms.json
tests/fourinarow/: fourinarow.txt
tests/get_sign/: Makefile  get_sign.asm  get_sign_instrumented  get_sign_instrumented.c
tests/move/: .Makefile.swp  .init_proc_wrapper.post.dot  .log.swp  .objdump  .term_proc_wrapper.offsets.dot  .term_proc_wrapper.post.dot  Makefile
tests/program_translation_validation/: .gitattributes  .gitignore  README.md
tests/puzzle/: puzzle.txt
tests/queens/: queens.txt
tests/scimark2/: scimark2.json  scimark2.txt
tests/scripts/: O3_flags.txt  O3_pass_list.txt  check_mem_edges.pl  check_prover_status.sh  check_status.sh  create_directtory_structure.pl  create_lspec.pl  create_lspec.pl.bkp  create_xspec.pl  declutter.pl  declutter.pl.bak  declutter.py  extractor.py  find_pc_in_relocinfo.pl  find_reuse.pl  gold.txt  instr.py  matcher_driver.sh  opt_candidates.txt  pass.py  pass_lengths.txt  progress.txt  proofScriptTemplate.py  remove_definitions.pl  run_batch_injected_bug_plv.sh  run_batch_plv.sh  run_batch_siv.sh  run_mcsema.sh  run_standalone_siv.sh  selected_O3_flags.txt  single.txt  specialize_template.pl  specialize_template.pl.bak  ssm-extractor.py  startfinder.py  test.py  toy.txt  triage.sh  utils.pm
tests/simantic-similarity-matching/: README.md
tests/single_instruction_translation_validation/: .gitignore  README.md
tests/smallpt/: smallpt.json  smallpt.txt
tests/stepanov_vector/: stepanov_vector.json  stepanov_vector.txt
tests/sum_2_n/: Makefile  sum_2_n.asm  sum_2_n.c  sum_2_n.i64
tests/testing_x86_dfg/: factorial.asm  run.sh  test_0.asm.dot.gold  test_1.asm  test_1.asm.dot.gold  test_2.asm.dot.gold  test_3.asm.dot.gold  test_4.asm  test_4.asm.dot.gold  test_5.asm.dot.gold  test_6.asm.dot.gold  test_7.asm  test_7.asm.dot.gold  test_8.asm  test_9.asm.dot.gold
utils/: relocate_makefiles.sh
(+193929 files in other folders)
