#add_subdirectory(max_stack_height)
#add_subdirectory(stack_deconstructor)
#add_subdirectory(variable_correspondence)
#add_subdirectory(signature)
add_subdirectory(memssa)
add_subdirectory(llvm-graph-matching)
#add_subdirectory(compositional-decompiler)
#add_subdirectory(func-analyzer)
#add_subdirectory(smt-generator)
#add_subdirectory(exprs)
add_subdirectory(esp_codegen)
